# folex

folex_bringup/launch/: folex_model.launch
folex_description/: CMakeLists.txt  package.xml
folex_description/meshes/: shoulder.stl
folex_description/urdf/: common_properties.xacro  folex.gazebo.xacro  folex.urdf.xacro
opencr/folex_core/: folex.cpp  folex.h  folex_core.h  folex_core.ino  folex_dynamixel_driver.cpp  folex_dynamixel_driver.h  folex_kinematics.cpp  folex_kinematics.h
